feat(setup): Add devise User and Admin and custom views using tailwind

--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -2,7 +2,6 @@
 <html>
   <head>
     <title>RailsHotwireTailwindBase</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
@@ -10,8 +9,9 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
-
-  <body>
-    <main><%= yield %></main>
+  <body class="bg-gray-100 h-screen">
+    <div class="flex h-full items-center justify-center">
+      <%= yield %>
+    </div>
   </body>
 </html>
