--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,54 +1,50 @@
-<div class="w-full max-w-xs">
-    <h1 class="font-hairline mb-6 text-center">Sign Up</h1>
-
+<div class="flex min-h-full items-center justify-center py-12 px-4 sm:px-6 lg:px-8">
+  <div class="w-full max-w-md space-y-8">
+    <div>
+      <img class="mx-auto h-12 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600" alt="Your Company">
+      <h2 class="mt-6 text-center text-3xl font-bold tracking-tight text-gray-900">Sign up for a new account</h2>
+      <% if controller_name != 'sessions' %>
+        <p class="mt-2 text-center text-sm text-gray-600">
+          Or
+          <%= link_to "Sign In", session_path(resource_name), class: "font-medium text-indigo-600 hover:text-indigo-500" %>
+        </p>
+      <% end %>
+    </div>
     <%= turbo_frame_tag dom_id(resource) do %>
-        <%= form_for(resource,
-                    as: resource_name,
-                    url: registration_path(resource_name),
-                    html: {
-                            class: "bg-white mb-4 px-8 pt-6 pb-8 rounded shadow-md"
-                    }
-            ) do |f| %>
-
-            <%= devise_error_messages! %>
-
-            <div class="mb-4">
-                <%= f.label :email, class: "block font-bold mb-2 text-gray-700 text-sm" %>
-                <%= f.email_field :email,
-                                autocomplete: "email",
-                                placeholder: "user@example.com",
-                                class: "appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none shadow focus:shadow-outline" %>
-            </div>
-
-            <div class="mb-4">
-                <%= f.label :password, class: "block font-bold mb-2 text-gray-700 text-sm" %>
-                <% if @minimum_password_length %>
-                    <small><em class="text-gray-600">(<%= @minimum_password_length %> characters minimum)</em></small>
-                <% end %>
-                <%= f.password_field :password,
-                                    autocomplete: "new-password",
-                                    class: "shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline"
-                %>
-            </div>
-
-            <div class="mb-4">
-                <%= f.label :password_confirmation, class: "block font-bold mb-2 text-gray-700 text-sm" %>
-                <%= f.password_field :password_confirmation,
-                                    autocomplete: "new-password",
-                                    class: "appearance-none border leading-tight focus:outline-none px-3 py-2 rounded shadow focus:shadow-outline text-gray-700 w-full"
-                %>
-            </div>
-
-            <div class="mb-4">
-                <%= f.submit "Sign Up",
-                            class: "button bg-blue-500 hover:bg-blue-700 font-bold text-white focus:outline-none py-2 px-4 rounded focus:shadow-outline w-full"
-                %>
-            </div>
-
-            <%= render "devise/shared/links" %>
-
-        <% end %>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: "mt-8 space-y-6"}) do |f| %>
+        <div class="-space-y-px rounded-md shadow-sm">
+          <div>
+            <%= f.label :email, class: "sr-only" %>
+            <%= f.email_field :email, autofocus: true,
+                                      autocomplete: "email",
+                                      placeholder: "user@example.com",
+                                      class: "relative block w-full appearance-none rounded-none rounded-t-md border border-gray-300 px-3 py-2 text-gray-900 placeholder-gray-500 focus:z-10 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm" %>
+          </div>
+          <div>
+            <%= f.label :password, class: "sr-only" %>
+            <%= f.password_field :password, autocomplete: "new-password",
+                                            placeholder: "Password",
+                                            class: "relative block w-full appearance-none rounded-none border border-gray-300 px-3 py-2 text-gray-900 placeholder-gray-500 focus:z-10 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm" %>
+          </div>
+          <div>
+            <%= f.label :password_confirmation, class: "sr-only" %>
+            <%= f.password_field :password_confirmation, autocomplete: "new-password",
+                                                         placeholder: "Password Confirmation",
+                                                         class: "relative block w-full appearance-none rounded-none rounded-b-md border border-gray-300 px-3 py-2 text-gray-900 placeholder-gray-500 focus:z-10 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm" %>
+          </div>
+        </div>
+        <div>
+          <%= f.button type: 'submit', class: "group relative flex w-full justify-center rounded-md border border-transparent bg-indigo-600 py-2 px-4 text-sm font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2" do %>
+            <span class="absolute inset-y-0 left-0 flex items-center pl-3">
+              <!-- Heroicon name: mini/lock-closed -->
+              <svg class="h-5 w-5 text-indigo-500 group-hover:text-indigo-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                <path fill-rule="evenodd" d="M10 1a4.5 4.5 0 00-4.5 4.5V9H5a2 2 0 00-2 2v6a2 2 0 002 2h10a2 2 0 002-2v-6a2 2 0 00-2-2h-.5V5.5A4.5 4.5 0 0010 1zm3 8V5.5a3 3 0 10-6 0V9h6z" clip-rule="evenodd" />
+              </svg>
+            </span>
+            Sign up
+          <% end %>
+        </div>
+      <% end %>
     <% end %>
-
-    <%= render "devise/shared/form_footer" %>
+  </div>
 </div>
